--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,7 +7,14 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 # TODO Append connection to H2 DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
+
+spring.sql.init.schema-location=classpath:schema.sql
+#spring.sql.init.data-locations=classpath:data.sql
+spring.jpa.properties.hibernate.default_schema=PUBLIC
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.sql.init.schema-locations=classpath:schema.sql
