--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-spring.jpa.hibernate.ddl-auto=none
+server.port=8080
+logging.level.org.zalando.logbook=TRACE
+
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+#logging.level.org.springframework.orm.jpa=TRACE
+#logging.level.org.springframework.transaction=TRACE
+#logging.level.org.springframework.transaction.interceptor=TRACE
+#logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 # TODO Append connection to Postgres DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
+
+spring.datasource.username=dbuser
+spring.datasource.password=12345
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.driver-class-name=org.postgresql.Driver
+
