--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,13 @@
 												<maximum>1</maximum>
 											</limit>
 										</limits>
+
+										<excludes>
+											<exclude>**/dto/*</exclude>
+											<exclude>**/config/*</exclude>
+											<exclude>**/entity/*</exclude>
+											<exclude>**/model/*</exclude>
+										</excludes>
 									</rule>
 								</rules>
 							</configuration>
